--- a/carrosel.html
+++ b/carrosel.html
@@ -19,112 +19,248 @@
 
 
     <div class="slider">
-        <div class="item">
-            <div class="item-carrosel"  >
+
+        <div class="item-transparente">
+            <div class="item-carrosel">
                 <img src="https://picsum.photos/id/239/550/550" alt="">
-                <p>
+                <p class="carrosel-card-categoria">
                     Front end para inovação
                 </p>
-                <p>
-                    02 de novembro de 2019
-                </p>
+            </div>
+        </div>    
+
+            <div class="item">
+                <div class="item-carrosel">
+                    <img src="https://picsum.photos/id/239/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                    <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/240/550/550" alt="">
+                    <p>
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                        <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+            <div class="item">
+
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                        <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
+            </div>
+            <div class="item">
+                <div class="item-carrosel">
+
+                    <img src="https://picsum.photos/id/241/550/550" alt="">
+                    <p class="carrosel-card-categoria">
+                        Front end para inovação
+                    </p>
+                    <p class="carrosel-card-titulo">
+                        02 de novembro de 2019
+                    </p>
+                    <hr class="home-destaque-hr">
+
+                    <!-- ========================================== -->
+
+                    <div class="separator clear-left">
+                        <p class="btn-type">10/04/2019</p>
+                        <!-- <p class="btn-likes">  </p>
+                            <p class="btn-views">2019</p> -->
+                        <p class="btn-details">20:00</p>
+                    </div>
+
+                </div>
+
+
             </div>
 
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/240/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/241/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/242/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/243/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/244/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/240/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/254/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
-
-        </div>
-        <div class="item">
-            <img src="https://picsum.photos/id/253/550/550" alt="">
-            <p>
-                Front end para inovação
-            </p>
-            <p>
-                02 de novembro de 2019
-            </p>
-
 
         </div>
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
 
 
