--- a/home.html
+++ b/home.html
@@ -94,6 +94,15 @@
                 Eventos em destaque
             </p>
             <hr class="home-destaque-hr">
+
+            <div class="item-transparente">
+                        <p class="carrosel-card-categoria">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere deleniti aliquid quas repudiandae veritatis beatae atque, a laudantium non. Explicabo, accusantium. Id sit provident quam corrupti maiores ducimus culpa sunt!
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis atque doloremque eligendi, voluptatum modi quia autem incidunt exercitationem perspiciatis pariatur quaerat dolore dolorem itaque veritatis illum deserunt quam sequi hic.
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus quam dolorem modi voluptates earum ut minus voluptas architecto. Fugit veniam nostrum impedit quos atque consequatur recusandae excepturi modi vel quam.
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet rerum architecto veritatis suscipit magni ipsum, eum error dicta repellendus temporibus totam! Voluptatibus voluptate ad aperiam iste minus non, quas repellendus!
+                        </p>
+                </div>
         </div>
 
         <div id="home-section-carrosel">
@@ -102,46 +111,233 @@
 
             <div class="slider">
                 <div class="item">
-                    <img src="https://picsum.photos/id/239/550/550" alt="">
+                    <div class="item-carrosel">
+                        <img src="https://picsum.photos/id/239/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
 
-                </div>
+                        <hr class="home-card-hr">
 
-                <div class="item">
-                    <img src="https://picsum.photos/id/240/550/550" alt="">
+                        <!-- ========================================== -->
 
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/241/550/550" alt="">
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/242/550/550" alt="">
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/243/550/550" alt="">
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/250/550/550" alt="">
-
-                </div>
-                <div class="item">
-                    <img src="https://picsum.photos/id/252/550/550" alt="">
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+                    </div>
 
                 </div>
                 <div class="item">
-                    <img src="https://picsum.photos/id/255/550/550" alt="">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/240/550/550" alt="">
+                        <p>
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                    <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+                    </div>
+
+
+
 
                 </div>
                 <div class="item">
-                    <img src="https://picsum.photos/id/247/550/550" alt="">
+
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                    <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="item">
+                    <div class="item-carrosel">
+
+                        <img src="https://picsum.photos/id/241/550/550" alt="">
+                        <p class="carrosel-card-categoria">
+                            Front end para inovação
+                        </p>
+                        <p class="carrosel-card-titulo">
+                            02 de novembro de 2019
+                        </p>
+                        <hr class="home-card-hr">
+
+                        <!-- ========================================== -->
+
+                        <div class="separator clear-left">
+                            <p class="btn-type">10/04/2019</p>
+                            <!-- <p class="btn-likes">  </p>
+                                        <p class="btn-views">2019</p> -->
+                            <p class="btn-details">20:00</p>
+                        </div>
+
+                    </div>
+
 
                 </div>
 
 
             </div>
-
-
 
             <!-- ========== código do carrousel  -->
 
@@ -157,13 +353,16 @@
     <section id="home-section-beneficios">
         <div class="home-box-texto-beneficios">
             <h2 class="home-texto-h2-beneficios">
-            Beneficios
+                Beneficios
             </h2>
 
             <hr class="home-beneficios-hr">
 
             <p class="home-texto-p-beneficios">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita dicta asperiores? Tempore velit, quisquam facilis maiores repellat, debitis numquam voluptatibus tenetur sed facere neque praesentium provident, magnam expedita veritatis.
+                Inscreva-se na SquareEvents, e realize seus eventos no espaço compartilhado da thoughtWorks. <br>
+                <p class="home-texto-p-beneficios-p2">
+                    Simples, Rápido e Descomplicado!
+                </p>
             </p>
         </div>
 
@@ -179,7 +378,8 @@
 
             <div class="home-box-texto-beneficios-img1 animated bounceInDown">
                 <p class="home-box-texto-p1-beneficios ">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
+                    Acompanhe de perto as melhores comunidades de tecnologia, crie networking, desenvolva hubs de
+                    conexões e tenha experiências inesquecíveis.
                 </p>
 
                 <button class="btn">
@@ -204,7 +404,8 @@
 
             <div class="home-box-texto-beneficios-img2 animated bounceInLeft">
                 <p class="home-box-texto-p2-beneficios">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque fugit laborum suscipit reprehenderit quis. Magnam eaque aut maxime est, excepturi autem non laboriosam veniam veritatis. Nam nobis ipsa repellat maiores?
+                    Realize os eventos na faixa, em um espaço colaborativo e inovador e no final de tudo ainda
+                    disfrutará de um coffe break.
                 </p>
 
                 <button class="btn btn2">
@@ -266,7 +467,8 @@
             <div class="home-section-mobile-box-texto animated bounceInUp">
                 <div class="home-section-mobile-box-texto-p">
                     <p class="home-section-mobile-box-p">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam maxime non sit, dicta laudantium obcaecati quas explicabo repudiandae. Enim nesciunt vitae temporibus distinctio soluta molestias, placeat vero atque ad! Unde.
+                        Vizualize todos os eventos que ocorrem na ThoughtWorks, na palma da sua mão. Acesse o site e
+                        confira agora mesmo.
                     </p>
 
                 </div>
