--- a/notfound.html
+++ b/notfound.html
@@ -11,23 +11,12 @@
 </head>
 <body>
     
-        <link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
-        
-                <!-- Error Page -->
-                    <div class="error">
-                        <div class="container-floud">
-                            <div class="col-xs-12 ground-color text-center">
-                                <div class="container-error-404">
-                                    <div class="clip"><div class="shadow"><span class="digit thirdDigit"></span></div></div>
-                                    <div class="clip"><div class="shadow"><span class="digit secondDigit"></span></div></div>
-                                    <div class="clip"><div class="shadow"><span class="digit firstDigit"></span></div></div>
-                                    <div class="msg">OH!<span class="triangle"></span></div>
-                                </div>
-                                <h2 class="h1">Sorry! Page not found</h2>
-                            </div>
-                        </div>
-                    </div>
-                <!-- Error Page -->
+		<div class="glitch_word_box">
+                <div class="line"></div>
+                <h1 id="word" class="glitch_word0">404 - page not found</h1>
+                <h1 id="word1" class="glitch_word1">404 - page not found</h1>
+                <h1 id="word2" class="glitch_word2">404 - page not found</h1>
+            </div>
 
 </body>
 </html>
